--- a/drone.yaml
+++ b/drone.yaml
@@ -1,4 +1,3 @@
-# Use root/example as user/password credentials
 version: '3.1'
 
 services:
@@ -17,6 +16,8 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: drone-db
+#    volumes:
+#      - mongo-data:/data/db
 
   mongo-express:
     image: mongo-express
@@ -37,3 +38,8 @@ services:
       - 8888:8888
     environment:
       RTSP_PROTOCOLS: tcp
+
+
+# volumes:
+#   mongo-data:
+#     driver: local
