--- a/drone.yaml
+++ b/drone.yaml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
 
   drone-server:
-    image: drone-server:1.09
+    image: drone-server:latest
     restart: always
     ports:
       - 3000:3000
