--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -1,8 +1,8 @@
 name: CI_CD
 
 on:
-#   push:
-#     branches: [ "main" ]
+  push:
+    branches: [ "main" ]
 #   pull_request:
 #     branches: [ "main" ]
 
